--- a/index.html
+++ b/index.html
@@ -1,1 +1,28 @@
-
+<!DOCTYPE html>
+<html lang="en">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta http-equiv="X-UA-Compatible" content="ie=edge" />
+    <title>Quiz Challenge</title>
+    <link rel="stylesheet" href="style.css" />
+    <script defer src="script.js"></script>
+  
+  </head>
+<body>
+    <div>
+      <header>
+          <div class="head">
+        <h1 id="high-score" class="btn">View High Scores</h1>       
+        <h2 id="timer">Time: 0</h2>
+            </div>
+      </header>
+      <div class="card">
+          <h1> Quiz Challenge</h1>
+          <h2>Try to answer the following code related questions within the time limit 
+                Keep in mind that incorrect answers will penalize your score/time 
+                by ten seconds.</h2>
+                <button id="start-quiz" class="btn">Start Quiz</button>
+        </div>
+  </body>
+</html>
