console logged score and initials

--- a/index.html
+++ b/index.html
@@ -42,8 +42,8 @@
              <h1>All Done!</h1>
             <h2>Your point total is ...<imput id="my-score"></h2>
             <form id="initials">Enter Initials:
-                <input type="text" name="initials" id="Enter Your Initials"> <imput>
-                    <button class="submit" id="sub-button">Submit</button>
+                <input type="text" name="initials" id="your-initials"> <imput>
+                    <button class="submit" id="save-score">Submit</button>
             </form>
         </div>
 
