--- a/index.html
+++ b/index.html
@@ -43,8 +43,14 @@
             <h2>Your point total is ...<imput id="my-score"></h2>
             <form id="initials">Enter Initials:
                 <input type="text" name="initials" id="your-initials"> <imput>
-                    <button class="submit" id="save-score">Submit</button>
+                    <button type="submit" id="save-score">Submit</button>
             </form>
+        </div>
+
+        <div class="list-score" id="leaderboard" style="display: none;">
+            <h2 class="list-title">High Scores</h2>
+            <ul class="name" id="my-list"></ul>
+            <button class="btn" href="/">Home</button>
         </div>
 
 
