--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@
         <div class="list-score" id="leaderboard" style="display: none;">
             <h2 class="list-title">High Scores</h2>
             <ul class="name" id="my-list"></ul>
-            <button class="btn" href="https://adamjfreeman.github.io/coding-quiz/index.html">Home</button>
+            <button class="btn" href="https://adamjfreeman.github.io/coding-quiz/">Home</button>
         </div>
 
 
