--- a/index.html
+++ b/index.html
@@ -49,8 +49,8 @@
 
         <div class="list-score" id="leaderboard" style="display: none;">
             <h2 class="list-title">High Scores</h2>
-            <ul class="name" id="my-list"></ul>
-            <button class="btn" href="/">Home</button>
+            <ul class="name" id="my-list">Top Performer</ul>
+            <button class="btn" onclick="window.location.href='https://adamjfreeman.github.io/coding-quiz/';">Home</button>
         </div>
 
 
